Refactor Update time and duration handling in sprint 8 solution